enu: enhance DaoHelperProducer and DataModelProducer to support Entit… (#1551)
* enu: enhance DaoHelperProducer and DataModelProducer to support EntityManagerSelector in addiition to LazyModelConfig annotations

* test coverage

* fixed tests